frontend_tests/negative/assignment_type/go.mod
module example.com/renvotests/negative/assignment

go 1.25
